# racing_web

./: .gitignore  Dockerfile  Dockerfile_scrapper  Dockerfile_webapp  Readme.txt  crontab  db_connectors.py  docker-compose.yaml  file_parsers.py  init.sql  nascar_calendars.py  pyproject.toml  requirements.txt  run_full_scrap.py  test.ipynb
scrapper/: db_connectors.py  db_scrapper.py  file_parsers.py  nascar_dataclasses.py  requirements.txt  run_full_scrap.py  scrap.py  scrap_auto.py
utils/: owners_to_teams.py
web_app/: app.py  data_processing.py  data_reader.py  penalties.py  pyproject.toml  standings_calculation.py
web_app/static/: style.css
web_app/templates/: base.html  formula1.html  nascar.html  wec.html
webpage/: app.py
webpage/templates/: base.html  nascar.html
webpage/utils/: data_processing.py  data_processing_from_csv.py  data_reader.py  tracks_to_types.py
