[tool.poetry]
name = "racing"
version = "0.1.0"
description = ""
authors = ["ruzarx"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.22.0"
webdriver-manager = "^4.0.1"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.2"
flask = "^3.0.3"
inflect = "^7.3.1"
flask-sqlalchemy = "^3.1.1"
ipykernel = "^6.29.5"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
